apps/production/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smb-filebrowser
  namespace: default
spec:
  selector:
    app: smb-filebrowser
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
